@@ -49,6 +49,7 @@ export(merge_dots_with_list)
 export(na)
 export(parenthesise)
 export(parenthesize)
+export(print_and_capture)
 export(safe_deparse)
 export(set_cause)
 export(strip_attributes)
